--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -13,7 +13,7 @@
 
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
-          <h1 class="display-3">Welcome to Bloccit</h1>
+          <h1 class="display-3">Welcome to QuickChat</h1>
           <p class="lead">An application for users to share information.</p>
           <a href="#" class="btn btn-primary btn-lg">Sign up</a>
         </header>
