--- a/src/views/chats/index.ejs
+++ b/src/views/chats/index.ejs
@@ -9,14 +9,24 @@
 
       <h1>Messages</h1>
 
+      <form action="/chats/create" method="post">
+        <div class="form-group">
+          <label for="title">Add your message</label>
+          <input type="text" class="form-control" name="author" aria-describedby="authorHelp" placeholder="Enter your name">
+        </div>
+        <div class="form-group">
+          <textarea rows="2" class="form-control" name="message" placeholder="Enter your message"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+
       <ul class="list-group">
+          <br />
 <!-- #1 -->
         <% chats.forEach((chat) => { %>
 <!-- #2 -->
           <li class="list-group-item">
-            <%= chat.author %>
-          </li>
-          <li class="list-group-item">
+            From: <%= chat.author %><br />
             <%= chat.message %>
           </li>
         <% }) %>
